# chapter_image

./: .gitattributes  .gitignore  definitions.py  generate.py  pyproject.toml
data/: groundtruth_mm.csv  monkey.tiff  stepped-mm.csv  stepped-px.csv  stepped.tiff
data/manual_defects/: canny.csv  fill.csv  manual.csv  threshold.csv
datagen/: edge.py  fill.py  threshold.py
imggen/: affine.py  all_threshold.py  decompose.py  denoise.py  equalisation.py  equalise_hist.py  groundtruth_transform.py  sobel.py  threshold.py
imggen/pipelines/: __init__.py  canny.py  threshold.py
imggen/routines/: histogram.py  plottools.py
imggen/transforms/: __init__.py  canny.py  fill.py  groundtruth.py  threshold.py
imggen/transforms/routines/: plot_transforms.py
text/: image.md  num-reference.docx  num-reference.odt  refs.bib
text/images/: .gitignore
