[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "chapter-image"
version = "0.1.0"
description = "Image processing chapter"
authors = ["Bruce Cowan <bruce.cowan@strath.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.6.1"
matplotlib = "~3.2"
scikit-image = "~0.16"

cueimgproc = { path = "../cueimgproc/" }

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.black]
target-version = ["py36"]
